--- a/package.json
+++ b/package.json
@@ -16,22 +16,25 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
     "@testing-library/user-event": "14.5.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react": "4.3.4",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
+    "@vitejs/plugin-react": "4.3.4",
     "eslint": "8.57.1",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
-    "postcss": "8.4.30",
-    "prisma": "6.7.0",
+    "jest": "^30.2.0",
     "jsdom": "26.0.0",
-    "tailwind-merge": "2.5.2",
+    "postcss": "8.4.30",
+    "prisma": "^6.7.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.7",
+    "ts-jest": "^29.4.5",
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
     "typescript": "5.2.2",
@@ -42,7 +45,7 @@
     "@headlessui/react": "1.7.18",
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -79,7 +82,7 @@
     "bcryptjs": "2.4.3",
     "chart.js": "4.4.9",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cookie": "1.0.2",
     "csv": "6.3.11",
@@ -113,7 +116,7 @@
     "react-resizable-panels": "2.1.3",
     "react-select": "5.8.0",
     "react-use": "17.6.0",
-    "recharts": "2.15.3",
+    "recharts": "^2.15.3",
     "sonner": "1.5.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
